Fix overlapping dates

--- a/_includes/css/amp-theme.css
+++ b/_includes/css/amp-theme.css
@@ -229,12 +229,12 @@ section.recent-posts {
   text-overflow: ellipsis;
   overflow: hidden
 }
+div.post-date,
 span.author-meta,
-span.post-date,
 span.post-name {
   display: inline-block
 }
-span.post-date,
+div.post-date,
 span.post-read {
   color: rgba(0, 0, 0, .44);
   margin: 7px 0
